k8s/books-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: books
  template:
    metadata:
      labels:
        component: books
    spec:
      containers:
        - name: books
          image: joshnavru/demo-books
          ports:
            - containerPort: 8000
