k8s/landing-page-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-page-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: landing-page
  ports:
    - port: 5000
      targetPort: 5000
