k8s/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mysql
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mysql
  template:
    metadata:
      labels:
        component: mysql
    spec:
      containers:
        - name: mysql
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-config-map-volume
              mountPath: /etc/mysql/conf.d/default_auth.cnf
              subPath: default_auth
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-config-map-volume
          configMap:
            name: mysql-config-map
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: database-pvc
