k8s/mysql-node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-node-port-service
spec:
  type: NodePort
  selector:
    component: mysql
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 30156
